--- a/doc/latex2/thesis.tex
+++ b/doc/latex2/thesis.tex
@@ -66,9 +66,17 @@
 %   This is a dedication to my cat.
 % \end{dedication}
 
-% \begin{acknowledgements}
-%   I acknowledge my acknowledgements.
-% \end{acknowledgements}
+\begin{acknowledgements}
+  This masters thesis marks the end of a five year education, and education I could not have completed without the help of my parents.\\
+  
+  \noindent I would like to thank my counselor, Hans Petter Langtangen, for forcing me to rewrite the entire thesis. It was hard, but worth it. 
+  Thanks to Geir Halnes, and Gaute Einevoll for help with the applications part of the thesis, and interesting discussions. \\
+  
+  Thanks to Torbjørn Seland, for reading this thing.\\
+  
+  And finally, a special thanks to my fantastic girlfriend, Nina, who has put up with my complaining throughout this project!
+  
+\end{acknowledgements}
 
 
 \tableofcontents
